// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Criteres Labellisation Premiere Etoile CAE 1`] = `
Array [
  <p
    className="text-grey625"
  >
    Ce premier niveau de labellisation ne nécessite pas d’audit et sera validé directement par l’ADEME
  </p>,
  <h2>
    Critères de labellisation
  </h2>,
  <ul>
    <li
      className="fr-mb-1w"
    >
      Renseigner tous les statuts du référentiel
    </li>
    <a
      className="fr-link fr-link--icon-right fr-fi-arrow-right-line fr-mb-2w"
      href="/collectivite/1/referentiels/cae/progression"
      target="_blank"
    >
      Mettre à jour
    </a>
    <li
      className=" fr-mt-2w fr-mb-1w"
    >
      Être une collectivité engagée dans une politique
       
      Climat Air Énergie
       et le prouver (via les documents preuves ou un texte justificatif)
    </li>
    <div
      className="critere-action-table fr-my-4"
    >
      <table>
        <thead>
          <tr>
            <th
              className="pl-10"
              colSpan={3}
            >
              Sous-action ou tâche
            </th>
            <th
              className="pr-6"
            >
              Statut ou score requis
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.1
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Identifier un⸱e élu⸱e référent⸱e
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.3
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Identifier une personne technique
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.3
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Mettre en place une équipe projet
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.2
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Engager un diagnostic territorial
            </td>
            <td>
              20% fait minimum
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation PLPDMA
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation liée au système de collecte
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.3.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation concernant la valorisation des déchets (dont organiques)
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.4.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation sur les impacts environnementaux des émissions polluantes et les nuisances (olfactives, sonores....)
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                3.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables (SPASER)
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                4.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Rédiger le rapport annuel SPPGD
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.2
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Avoir engagé la politique Économie Circulaire
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation PLPDMA
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation liée au système de collecte
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.3.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation concernant la valorisation des déchets (dont organiques)
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.4.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation sur les impacts environnementaux des émissions polluantes et les nuisances (olfactives, sonores....)
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                3.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables (SPASER)
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                4.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Rédiger le rapport annuel SPPGD
            </td>
            <td>
              Fait
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <li
      className="fr-mb-1w"
    >
      Signer un
       
      <a
        href="/Acte_engagement.docx"
        rel="noopener"
        target="_blank"
      >
        acte d’engagement
      </a>
       
      dans le programme affirmant votre adhésion
       
      <a
        href="/TE-CAE_Reglement-label_2021.pdf"
        rel="noopener"
        target="_blank"
      >
        au règlement du label
      </a>
    </li>
    <button
      className="fr-btn fr-btn--sm fr-btn--secondary"
      data-test="AddDocsButton"
      onClick={[Function]}
    >
      + Ajouter
    </button>
  </ul>,
]
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Criteres Labellisation Premiere Etoile ECI 1`] = `
Array [
  <p
    className="text-grey625"
  >
    Ce premier niveau de labellisation ne nécessite pas d’audit et sera validé directement par l’ADEME
  </p>,
  <h2>
    Critères de labellisation
  </h2>,
  <ul>
    <li
      className="fr-mb-1w"
    >
      Renseigner tous les statuts du référentiel
    </li>
    <a
      className="fr-link fr-link--icon-right fr-fi-arrow-right-line fr-mb-2w"
      href="/collectivite/1/referentiels/eci/progression"
      target="_blank"
    >
      Mettre à jour
    </a>
    <li
      className=" fr-mt-2w fr-mb-1w"
    >
      Être une collectivité engagée dans une politique
       
      Économie Circulaire
       et le prouver (via les documents preuves ou un texte justificatif)
    </li>
    <div
      className="critere-action-table fr-my-4"
    >
      <table>
        <thead>
          <tr>
            <th
              className="pl-10"
              colSpan={3}
            >
              Sous-action ou tâche
            </th>
            <th
              className="pr-6"
            >
              Statut ou score requis
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.1
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Identifier un⸱e élu⸱e référent⸱e
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.3
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Identifier une personne technique
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.3
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Mettre en place une équipe projet
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.2
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Engager un diagnostic territorial
            </td>
            <td>
              20% fait minimum
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation PLPDMA
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation liée au système de collecte
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.3.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation concernant la valorisation des déchets (dont organiques)
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.4.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation sur les impacts environnementaux des émissions polluantes et les nuisances (olfactives, sonores....)
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                3.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables (SPASER)
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                4.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Rédiger le rapport annuel SPPGD
            </td>
            <td>
              Programmé ou fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                1.1.1.2
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Avoir engagé la politique Économie Circulaire
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation PLPDMA
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la réglementation liée au système de collecte
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.3.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation concernant la valorisation des déchets (dont organiques)
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                2.4.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Respecter la règlementation sur les impacts environnementaux des émissions polluantes et les nuisances (olfactives, sonores....)
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                3.2.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables (SPASER)
            </td>
            <td>
              Fait
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td
              className="text-center w-[56px]"
            />
            <td
              className="text-right text-xs w-[40px] text-grey625"
            >
              <span>
                4.1.0
              </span>
            </td>
            <td
              className="pl-4 pr-8"
            >
              Rédiger le rapport annuel SPPGD
            </td>
            <td>
              Fait
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <li
      className="fr-mb-1w"
    >
      Signer un
       
      <a
        href="/Acte_engagement.docx"
        rel="noopener"
        target="_blank"
      >
        acte d’engagement
      </a>
       
      dans le programme affirmant votre adhésion
       
      <a
        href="/Reglement_label_ECi_20220316.pdf"
        rel="noopener"
        target="_blank"
      >
        au règlement du label
      </a>
    </li>
    <button
      className="fr-btn fr-btn--sm fr-btn--secondary"
      data-test="AddDocsButton"
      onClick={[Function]}
    >
      + Ajouter
    </button>
  </ul>,
]
`;
